// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create snapshot should render and match the snapshot for adding an item 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 15px;
}

.emotion-0 {
  position: relative;
}

.emotion-21 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,98%);
  border-color: hsl(0,0%,80%);
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 38px;
  outline: 0 !important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
}

.emotion-20:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  box-sizing: border-box;
}

.emotion-13 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-14 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: #222;
  box-sizing: border-box;
}

.emotion-19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-16 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-18 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-18:hover {
  color: hsl(0,0%,60%);
}

.emotion-17 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

<div>
  <h1>
    Add
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="datetime-local"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          className="form-control"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          step="any"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <textarea
          className="form-control"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="tags"
          />
        </div>
        <div
          className="emotion-21"
          id="tags"
          onKeyDown={[Function]}
        >
          <span
            aria-atomic="true"
            aria-live="polite"
            className="emotion-12"
            role="status"
          >
            0 results available.
          </span>
          <div
            className="emotion-20"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-15"
            >
              <div
                className="emotion-13"
              >
                Select...
              </div>
              <div
                className="emotion-14"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    aria-busy={false}
                    aria-expanded={false}
                    aria-haspopup={false}
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <span
                className="emotion-16"
                role="presentation"
              />
              <div
                className="emotion-18"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                role="button"
              >
                <svg
                  className="emotion-17"
                  focusable="false"
                  height={20}
                  role="presentation"
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Create snapshot should render and match the snapshot for editing an item 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 15px;
}

.emotion-0 {
  position: relative;
}

.emotion-21 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,98%);
  border-color: hsl(0,0%,80%);
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 38px;
  outline: 0 !important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
}

.emotion-20:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  box-sizing: border-box;
}

.emotion-13 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-14 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: #222;
  box-sizing: border-box;
}

.emotion-19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-16 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-18 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-18:hover {
  color: hsl(0,0%,60%);
}

.emotion-17 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

<div>
  <h1>
    Edit
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="datetime-local"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          className="form-control"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          step="any"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <textarea
          className="form-control"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="tags"
          />
        </div>
        <div
          className="emotion-21"
          id="tags"
          onKeyDown={[Function]}
        >
          <span
            aria-atomic="true"
            aria-live="polite"
            className="emotion-12"
            role="status"
          >
            0 results available.
          </span>
          <div
            className="emotion-20"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-15"
            >
              <div
                className="emotion-13"
              >
                Select...
              </div>
              <div
                className="emotion-14"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    aria-busy={false}
                    aria-expanded={false}
                    aria-haspopup={false}
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <span
                className="emotion-16"
                role="presentation"
              />
              <div
                className="emotion-18"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                role="button"
              >
                <svg
                  className="emotion-17"
                  focusable="false"
                  height={20}
                  role="presentation"
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
